--- a/src/backend/.env
+++ b/src/backend/.env
@@ -1,6 +1,5 @@
 # PostgreSQL connection string from Render
-DATABASE_URL=postgresql://postgres:RUmdRiWsWPBTDcetLgkrgFeJMbNCCYrg@ballast.proxy.rlwy.net:38730/railway
-
+DATABASE_URL=postgresql://train_res_sys_user:L0an29EtIfa2qkRSIFuRfsrVrieZwXfA@dpg-cvskm9ogjchc739d5iv0-a.singapore-postgres.render.com/train_res_sys
 # Optional: specify your app port (if needed)
 PORT=5000
 
